Bug 256790 - Fix a few more secure decoding issues
Summary: Fix a few more secure decoding issues
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alex Christensen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-15 09:33 PDT by Alex Christensen
Modified: 2023-05-15 11:51 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Christensen 2023-05-15 09:33:23 PDT
rdar://109286881
Comment 1 Alex Christensen 2023-05-15 09:39:20 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13886
Comment 2 EWS 2023-05-15 11:51:09 PDT
Committed 264079@main (b17879dcdd0e): <https://commits.webkit.org/264079@main>

Reviewed commits have been landed. Closing PR #13886 and removing active labels.